fixed transparent background on mobile

--- a/philip-morgan-foundation/src/PageComponents/_Navbar.scss
+++ b/philip-morgan-foundation/src/PageComponents/_Navbar.scss
@@ -129,6 +129,7 @@ nav {
       transform: translateX(0);
       position: absolute;
       display: flex;
+      background: white;
     }
 
     .nav-right {
